Minor fix in cart modal visibility.

--- a/src/components/LinkElements/CartLinkElement/CartLinkElement.module.scss
+++ b/src/components/LinkElements/CartLinkElement/CartLinkElement.module.scss
@@ -39,9 +39,8 @@
 .hideBorderBox {
   position: absolute;
   z-index: 2;
-  height: 4px;
+  height: 6px;
   width: 52px;
   background-color: white;
   bottom: -4px;
-  right: 0;
 }
